# GtkSu

./: .gitignore  BUGS-ETC  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  makepkg  remakesourcelist
GtkSu/: flagsandlibs  sources
GtkSu/MakeSuWrap/: Makefile.am  Makefile.in  suwrap.cpp
GtkSu/app/: Makefile.am  Makefile.in
GtkSu/debug/: Makefile.am
GtkSu/resources/man/: gtksu.1  gtksu.mpz
GtkSu/resources/pixmaps/: GtkSu.desktop
GtkSu/src/: internet.cpp  internet.h  main.cpp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
